# agentboard

./: .gitignore  Cargo.toml  DEPLOYMENT.md  GPT_REVIEW_REBUTTAL.md  PHASES_21_25_ADVERSARIAL_AUDIT_REPORT.md  PHASES_21_25_AUDIT_BRIEF.md  bunfig.toml  feature_brief.md  package.json  test-context-injection-result.txt
.claude/agent-sources/: acceptance-tester.md  amendment-handler.md  codebase-mapper.md  codebase-scout.md  conformance-checker.md  spec-decomposer.md  test-writer.md
.claude/agent-templates/: base-agent.md
.workflow/: blackboard.yaml  constitution.yaml  discovery.yaml  project_profile.yaml
crates/minion-executor/: Cargo.toml
crates/minion-executor/src/: api_client.rs  cc_executor.rs  codex_executor.rs  config.rs  context.rs  damage_guard.rs  diff.rs  event_reporter.rs  executor.rs  gates.rs  lib.rs  main.rs  mcp_client.rs  wo.rs
crates/minion-executor/src/dispatcher/: graph.rs  mod.rs  scheduler.rs  state.rs
crates/minion-executor/src/tools/: done.rs  mcp_proxy.rs  mod.rs  read_file.rs  run_command.rs  write_file.rs
crates/minion-executor/test-fixtures/: config.yaml  wo-test-001.yaml  wo-test-002-refactor.yaml
crates/minion-executor/test-fixtures/codex-test/: wo-impl-001.yaml  wo-impl-002.yaml  wo-prep-001.yaml
crates/minion-executor/test-fixtures/cycle-test/: wo-cycle-a.yaml  wo-cycle-b.yaml
crates/minion-executor/test-fixtures/dispatch-test/: wo-d-001.yaml  wo-d-002.yaml  wo-d-003.yaml
crates/minion-executor/test-fixtures/retry-test/: wo-retry-001.yaml
docs/: agent-teams-integration-plan.md  clawdbot-supervisor-agent.md
(+737 files in other folders)
