[package]
name = "minion-executor"
version = "0.1.0"
edition = "2021"
description = "Minimal-loop agent executor for the Minion Swarm System"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
dirs-next = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
